# gif_memer_bot_discord

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  config.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  python main.py  requirements.txt  └── README.md             # This file
cogs/: dashboard.py  memes.py  settings.py  voice.py
pytest tests/:  -v
static/: style.css
templates/: base.html  index.html  server_settings.html  servers.html
tests/: conftest.py  test_dashboard.py  test_integration.py  test_memes.py  test_settings.py
